[project]
name = "pdf-converter"
requires-python = ">=3.11"
dependencies = ["markdown", "weasyprint"]

[dependency-groups]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["UP032"]  # project uses .format() over f-strings by convention

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
